--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <input type="password" id="access_id" placeholder="ACCESS ID" value="" />
 
                 <label>Secret Key:</label>
-                <input type="password" id="secret_key" placeholder="SECRET KEY" value="" />
+                <input type="password" id="secret_key" placeholder="SECRET KEY" value="AKIA3JODKKYQM3U6LN3M" />
                 <label>Session Token (if using MFA):</label>
-                <input type="password" id="session_token" placeholder="SESSION TOKEN" value="" />
+                <input type="password" id="session_token" placeholder="SESSION TOKEN" value="jXJ9meBnEFmiVBKHJJDrDkqp1V6v2VQJwZ1SQLFe" />
             </div>
             <div class="col">
                 <label>Language: </label>
