--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <div class="row">
             <div class="col">
                 <label>Access ID:</label>
-                <input type="password" id="access_id" placeholder="ACCESS ID" value="" />
+                <input type="password" id="access_id" placeholder="ACCESS ID" value="AKIA3JODKKYQM3U6LN3M" />
 
                 <label>Secret Key:</label>
-                <input type="password" id="secret_key" placeholder="SECRET KEY" value="AKIA3JODKKYQM3U6LN3M" />
+                <input type="password" id="secret_key" placeholder="SECRET KEY" value="jXJ9meBnEFmiVBKHJJDrDkqp1V6v2VQJwZ1SQLFe" />
                 <label>Session Token (if using MFA):</label>
-                <input type="password" id="session_token" placeholder="SESSION TOKEN" value="jXJ9meBnEFmiVBKHJJDrDkqp1V6v2VQJwZ1SQLFe" />
+                <input type="password" id="session_token" placeholder="SESSION TOKEN" value="" />
             </div>
             <div class="col">
                 <label>Language: </label>
