--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="error" class="isa_error"></div>
         <div class="row">
             <div class="col">
-                <input type="hidden" id="access_id" placeholder="ACCESS ID" value="AKIA3JODKKYQM3U6LN3M" />
-                <input type="hidden" id="secret_key" placeholder="SECRET KEY" value="jXJ9meBnEFmiVBKHJJDrDkqp1V6v2VQJwZ1SQLFe" />
+                <input type="text" id="access_id" placeholder="ACCESS ID" value="" />
+                <input type="text" id="secret_key" placeholder="SECRET KEY" value="" />
                 <input type="hidden" id="language" value="en-US" />
                 <input type="hidden" id="region" value="us-east-1" />
                 <!--
