--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <label>Session Token (if using MFA):</label>
                 <input type="password" id="session_token" placeholder="SESSION TOKEN" value="" />
             </div>
-            <div class="col">
+            <div class="col hide">
                 <label>Language: </label>
                 <select id="language">
                     <optgroup label="English">
