--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 </select>
             </div>
         </div>
+        <div class="row">
+            <mark> Why did you make so much soup </mark>
+        </div>
         <textarea id="transcript" placeholder="Press Start and speak into your mic" rows="5"
             readonly="readonly"></textarea>
         <div class="row">
