Changed the text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="row">
-            <mark> Why did you make so much soup </mark>
+            <mark> Mental models are how we understand the world. Not only do they shape what we think and how we understand but they shape the connections and opportunities that we see. Mental models are how we simplify complexity, why we consider some things more relevant than others, and how we reason. </mark>
         </div>
         <textarea id="transcript" placeholder="Press Start and speak into your mic" rows="5"
             readonly="readonly"></textarea>
@@ -63,7 +63,7 @@
                 <button id="stop-button" class="button-xl" title="Stop Transcription" disabled="true"><i
                         class="fa fa-stop-circle"></i> Stop
                 </button>
-                <button id="reset-button" class="button-xl button-secondary" title="Clear Transcript"> 
+                <button id="reset-button" class="button-xl button-secondary" title="Clear Transcript">
                     Clear Transcript
                 </button>
             </div>
