--- a/index.html
+++ b/index.html
@@ -14,42 +14,14 @@
         <div id="error" class="isa_error"></div>
          <div class="row">
             <div class="col">
-                <label>Access ID:</label>
                 <input type="password" id="access_id" placeholder="ACCESS ID" value="" />
-
-                <label>Secret Key:</label>
                 <input type="password" id="secret_key" placeholder="SECRET KEY" value="" />
-                <label>Session Token (if using MFA):</label>
                 <input type="hidden" id="session_token" placeholder="SESSION TOKEN" value="" />
             </div>
-            <div class="col hide">
-                <label>Language: </label>
-                <input type="hidden" id="language" value="en-US" />
-                <select id="languagex">
-                    <optgroup label="English">
-                        <option value="en-US">US English (en-US)</option>
-                        <option value="en-AU">Australian English (en-AU)</option>
-                        <option value="en-GB">British English (en-GB)</option>
-                    </optgroup>
-                    <optgroup label="French">
-                        <option value="fr-CA">Canadian French (fr-CA)</option>
-                        <option value="fr-FR">French (fr-FR)</option>
-                    </optgroup>
-                    <optgroup label="Spanish">
-                        <option value="es-US">US Spanish (es-US)</option>
-                    </optgroup>
-                </select>
-
-                <label>Region:</label>
-                <select id="region">
-                    <option value="us-east-1">US East (N. Virginia)</option>
-                    <option value="us-east-2">US East (Ohio)</option>
-                    <option value="us-west-2">US West (Oregon)</option>
-                    <option value="ap-southeast-2">Asia Pacific (Sydney)</option>
-                    <option value="ca-central-1">Canada (Central)</option>
-                    <option value="eu-west-1">EU (Ireland)</option>
-                </select>
-            </div>
+            
+                <input type="hidden" id="language" value="en-US" />               
+                <input type="hidden" id="region" value="us-east-1" />
+            
         </div>
         <div class="row">
             <mark id="input"> Mental models are how we understand the world. Not only do they shape what we think and how we understand but they shape the connections and opportunities that we see. Mental models are how we simplify complexity, why we consider some things more relevant than others, and how we reason. </mark>
